beginning of footer / individual social icon image upload

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -88,7 +88,10 @@
             <div id="tutorials">
                 <!-- Diagonal Smile -->
                 <div class="tutorial-card" id="diagonal-smile">
-                    <img src="images/diagonalsmile.png" alt="DiagonalSmile" class="tutorial-img">
+                    <div class="video-images">
+                        <img src="images/diagonalsmile.png" alt="DiagonalSmile" class="tutorial-img">
+                        <img src="images/play.png" alt="play-button" class="play-button">
+                    </div>
                     <h2 class="tutorial-title">Diagonal Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
@@ -110,8 +113,10 @@
                 </div>
                 <!-- Sad Smile -->
                 <div class="tutorial-card" id="sad-smile">
-                    <img src="images/sadsmile.png" alt="SadSmile" class="tutorial-img">
-                    <h2 class="tutorial-title">Sad Smile</h2>
+                    <div class="video-images">
+                        <img src="images/sadsmile.png" alt="SadSmile" class="tutorial-img">
+                        <img src="images/play.png" alt="play-button" class="play-button">
+                    </div>                    <h2 class="tutorial-title">Sad Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
                         <div class="author-details">
@@ -132,7 +137,10 @@
                 </div>
                 <!-- Natural Smile -->
                 <div class="tutorial-card" id="natural-smile">
-                    <img src="images/naturalsmile.png" alt="NaturalSmile" class="tutorial-img">
+                    <div class="video-images">
+                        <img src="images/naturalsmile.png" alt="NaturalSmile" class="tutorial-img">
+                        <img src="images/play.png" alt="play-button" class="play-button">
+                    </div>                    
                     <h2 class="tutorial-title">Natural Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
@@ -154,7 +162,10 @@
                 </div>
                 <!-- Happy Smile -->
                 <div class="tutorial-card" id="happy-smile">
-                    <img src="images/happysmile.png" alt="HappySmile" class="tutorial-img">
+                    <div class="video-images">
+                        <img src="images/happysmile.png" alt="HappySmile" class="tutorial-img">
+                        <img src="images/play.png" alt="play-button" class="play-button">
+                    </div>
                     <h2 class="tutorial-title">Happy Smile</h2>
                     <p class="tutorial-description">Lorem ipsum dolor sit amet, consect adipiscing elit, sed do eiusmod.</p>
                     <div class="tutorial-author">
@@ -179,26 +190,26 @@
 
         <!-- Free Membership Section -->
         <section id="membership-section">
-            <h1 id="membership-heading">Free membership</h1>
-            <div id="membership-containers">
+            <h1 id="membership-heading"><span id="free">Free</span> membership</h1>
+            <div id="membership-container">
                 <!-- Lorem ipsum div x4 -->
                 <div class="membership-block">
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <img src="images/smilelogo.png" alt="LoremIpsum" class="membership-block-img">
                     <h2 class="membership-block-title">Lorem ipsum</h2>
                     <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="membership-block">
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <img src="images/smilelogo.png" alt="LoremIpsum" class="membership-block-img">
                     <h2 class="membership-block-title">Lorem ipsum</h2>
                     <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="membership-block">
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <img src="images/smilelogo.png" alt="LoremIpsum" class="membership-block-img">
                     <h2 class="membership-block-title">Lorem ipsum</h2>
                     <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
                 <div class="membership-block">
-                    <img src="lorem_ipsum.jpg" alt="LoremIpsum" class="membership-block-img">
+                    <img src="images/smilelogo.png" alt="LoremIpsum" class="membership-block-img">
                     <h2 class="membership-block-title">Lorem ipsum</h2>
                     <p class="membership-block-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 </div>
@@ -210,7 +221,7 @@
         <!-- F.A.Q. Section-->
         <section id="faq-section">
             <h1 id="faq-heading">F.A.Q.</h1>
-            <div id="faq-content">
+            <div id="faq-container">
             <!-- How does this work div x4-->
                 <div class="faq-row">
                     <div class="faq-item">
