final first pass push

--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -249,23 +249,23 @@
 
     <!-- Footer section -->
     <footer id="footer-section">
-        <div id="footer-content">
+        <div id="footer-container">
             <div id="footer-logo">
                 <!-- Smile School Logo -->
-                <img src="smile_logo.jpg" alt="logo" id="footer-logo-img" >
+                <img src="images/logo_with_name.png" alt="logo" id="footer-logo-img" >
             </div>
                 <div id="social-icons">
                     <!-- Social Media Icons -->
                     <a href="#">
-                        <img src="facebook_icon.jpg" alt="Facebook" class="social-icon"></a>
+                        <img src="images/Facebook_White.png" alt="Facebook" class="social-icon"></a>
                     <a href="#">
-                        <img src="twitter_icon.jpg" alt="Twitter" class="social-icon"></a>
+                        <img src="images/Twitter_White.png" alt="Twitter" class="social-icon"></a>
                     <a href="#">
-                        <img src="instagram_icon.jpg" alt="Instagram" class="social-icon"></a>
+                        <img src="images/Instagram_White.png" alt="Instagram" class="social-icon"></a>
                 </div>
-            <!-- Copyright -->
-            <p class="copyright-text">&copy;smileschool 2020</p>
         </div>
+        <!-- Copyright -->
+        <p class="copyright-text">&copy;smileschool 2020</p>
     </footer>
 </body>
 </html>
